prevent wrapping on figcaption metadata

--- a/src/styles/views/gallery/index.styl
+++ b/src/styles/views/gallery/index.styl
@@ -216,7 +216,7 @@ gallery_column_width_breakpoint_0 = gallery_cwb_3 = 212px
                                 +max(2)
                                     flex 1
                                 +min(2)
-                                    min-width rem(810px)
+                                    min-width rem(880px)
                                     justify-content space-between
                                     margin-top 1.3rem
                                     padding 1.3rem 1.9rem 1.7rem
@@ -231,6 +231,7 @@ gallery_column_width_breakpoint_0 = gallery_cwb_3 = 212px
                                     &-inner
                                         display flex
                                         flex-flow row wrap
+                                        min-width max-content
                                         margin-top 2rem
                                         padding-top: 2.4rem
                                         text-align left
